# taller-agentes-voz

./: .gitignore
livekit-voice-agent/: Agents_Configuration.md  README.md  README_MIGRACION.md  README_OUTBOUND.md  agent.py  agent_old.py  agent_old2.py  agent_old3.py  dispatch-rule.json  example.env.local  inbound-trunk.json  livekit.toml  outbound-trunk.json  participant.json  pyproject.toml
